fix test inventory